⬅️ Updated for this repository

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>KwiatekMiki - Redirecting to main site...</title>
+    <title>Redirecting...</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     
     <script>
         setTimeout(function(){
-            window.location.href = "https://kwiatekmiki.pl";
+            window.location.href = "https://google.com";
         }, 250);
     </script>
     
@@ -16,37 +16,12 @@
             margin: 0px;
             font-family: 'Comic Sans MS';
             color: white;
+            font-size: 35px;
             text-align: center;
-        }
-
-        img {
-            animation: spin 2s linear infinite;
-            width: 25vh;
-            height: 25vh;
-        }
-
-        #hed {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        @keyframes spin {
-            from {
-                transform: rotate(0deg);
-            }
-
-            to {
-                transform: rotate(360deg);
-            }
         }
     </style>
 </head>
 <body>
-    <div id="hed">
-        <img src="./mc.png" alt="KwiatekMiki">
-    </div>
-    <h1>Redirecting to kwiatekmiki.pl</h1>
+    <p>Redirecting...</p>
 </body>
 </html>
